--- a/web_version/style.css
+++ b/web_version/style.css
@@ -1,7 +1,9 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Poppins;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 body {
@@ -10,7 +12,17 @@ body {
     background: #171723;
 }
 
-div {
+header {
+    background: black;
+    padding: 20px;
+    color: white;
+}
+
+section {
+    background-color: white;
+}
+
+div.cover {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -21,6 +33,38 @@ div {
     justify-content: center;
     flex-direction: column;
     text-align: center;
+}
+
+div.container{
+    width:100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 5vw 15vw 50vw 1fr;
+    grid-template-rows: 8vh 1fr 1fr 8vh;
+    gap:10px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.container div{
+    border: 1px solid white;
+    padding: 10px;
+}
+
+.container .sideBar {
+    grid-column: 2;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    padding: 2vh 2vw;
+    background-color: aliceblue;
+}
+
+.container .canvasContainer{
+    grid-column: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    padding: 2vh 2vw;
+    background-color: rgb(255, 255, 255);
 }
 
 h1 {
@@ -55,8 +99,8 @@ button {
 
 canvas.webgl {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    left: 24vw;
+    top: 15vh;
+    width: 100px;
+    height: 100px;
 }
