--- a/web_version/style.css
+++ b/web_version/style.css
@@ -1,15 +1,12 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
 }
 
 body {
     margin: 0px;
     overflow: hidden;
-    background: #171723;
+    background: #21252b;
 }
 
 header {
@@ -35,36 +32,64 @@ div.cover {
     text-align: center;
 }
 
-div.container{
-    width:100vw;
+div.container {
+    width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-columns: 5vw 15vw 50vw 1fr;
-    grid-template-rows: 8vh 1fr 1fr 8vh;
-    gap:10px;
-    padding: 10px;
+    grid-template-columns: 20vw 60vw 20fr;
+    grid-template-rows: 13vh 1fr 1fr 3vh;
     box-sizing: border-box;
 }
 
-.container div{
-    border: 1px solid white;
-    padding: 10px;
+div.container .header {
+    grid-row: 1;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    background-color: #282c34;
+    border-bottom: 5px solid #4b4b4b;
 }
+
 
 .container .sideBar {
-    grid-column: 2;
+    grid-column: 1;
     grid-row-start: 2;
     grid-row-end: 4;
-    padding: 2vh 2vw;
-    background-color: aliceblue;
+    background-color: #282c34;
 }
 
-.container .canvasContainer{
+#right {
+    grid-column: 3;
+}
+
+.sideBarHeader {
+    width: 100%;
+    height: 5vh;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    color: #cccccc;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #333842;
+}
+
+.container .canvasContainer {
     grid-column: 3;
     grid-row-start: 2;
     grid-row-end: 4;
     padding: 2vh 2vw;
-    background-color: rgb(255, 255, 255);
+    background-color: #333842;
+}
+
+.footer {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row: 4;
+    background-color: #333842;
 }
 
 h1 {
@@ -99,8 +124,75 @@ button {
 
 canvas.webgl {
     position: fixed;
-    left: 24vw;
-    top: 15vh;
+    left: 25vw;
+    top: 17vh;
     width: 100px;
     height: 100px;
+    border-radius: 10px;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.3);
+}
+
+input:focus {
+    outline: none;
+}
+
+input.color {
+    text-align: center;
+    margin: 2px;
+    padding: 5px;
+    border: 0;
+    outline: 0;
+    width: 140px;
+    height: 20px;
+}
+
+button.sub {
+    background: url(remove.png);
+    background-size: 25px 25px;
+    background-repeat: no-repeat;
+    text-align: center;
+    font-size: 40px;
+    height: 25px;
+    width: 25px;
+    margin-left: 10%;
+    color: #3264fe;
+    display: flex;
+    border-radius: 0px;
+    align-items: center;
+    justify-content: center;
+}
+
+button.add-color {
+    background-color: #c44e41;
+    height: 40px;
+    width: 20%;
+    font-family: "Roboto Mono", monospace;
+    font-weight: 200;
+    font-size: 30px;
+    border-radius: 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*box-shadow: 0 20px 30px rgba(0, 0, 0, 0.3);*/
+    margin: 0.5vw;
+}
+
+#add {
+    float: left;
+}
+
+#sub {
+    float: right;
+}
+
+#reorder{
+    font-family: 'Oswald', sans-serif;
+    font-size: 20px;
+    border-radius: 3px;
+    width: 50%;
+}
+
+.color-slot {
+    display: flex;
+    align-items: center;
 }
